[gd_scene load_steps=10 format=3 uid="uid://1by1lfh1ck8v"]

[ext_resource type="TileSet" uid="uid://dw8wfnhpxqqy5" path="res://assets/tilemap/main_tiles.tres" id="1_28fu7"]
[ext_resource type="Script" path="res://scenes/Levels/Level.gd" id="1_qnq4p"]
[ext_resource type="PackedScene" uid="uid://d05r20voo341a" path="res://entities/Enemies/path_follower/path_follow_enemy.tscn" id="3_dbq4k"]
[ext_resource type="PackedScene" uid="uid://dhsmchb3s5oa2" path="res://entities/Items/burger.tscn" id="4_647um"]
[ext_resource type="PackedScene" uid="uid://bum4lxm6xqo04" path="res://entities/Enemies/hunter_a/hunter_a.tscn" id="5_gx02b"]
[ext_resource type="PackedScene" uid="uid://wmarh2nq5s4j" path="res://entities/Neutrals/Hubbedo/hubbedo.tscn" id="5_q5x21"]
[ext_resource type="PackedScene" uid="uid://csbacuepkwi4w" path="res://entities/Items/health_pickup.tscn" id="7_8htb3"]

[sub_resource type="Curve2D" id="Curve2D_pncgo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 51, 48, 0, 0, 0, 0, -154, 48, 0, 0, 0, 0, -152, -72, 0, 0, 0, 0, -60, 229, 0, 0, 0, 0, 55, -73, 0, 0, 0, 0, 51, 48)
}
point_count = 6

[sub_resource type="CircleShape2D" id="CircleShape2D_od5vr"]
radius = 30.3645

[node name="Level2" type="TileMap"]
tile_set = ExtResource("1_28fu7")
format = 2
layer_0/tile_data = PackedInt32Array(720893, 65536, 2, 786429, 65536, 2, 720894, 65536, 1, 786430, 65536, 2, 851966, 65536, 2, 786431, 65536, 2, 851967, 65536, 2, 917503, 65536, 2, 786432, 65536, 2, 851968, 65536, 2, 786433, 458752, 0, 851969, 65536, 2, 786434, 65536, 1, 851970, 65536, 2, 786435, 327680, 0, 851971, 65536, 2, 917502, 65536, 2, 851965, 65536, 2, 917501, 65536, 2, 720895, 65536, 1, 720896, 458752, 0, 655360, 262144, 0, 720897, 262144, 0, 786436, 327680, 0, 851972, 65536, 2, 786437, 327680, 0, 851973, 65536, 2, 786438, 327680, 0, 851974, 65536, 2, 786439, 327680, 0, 851975, 65536, 2, 786440, 327680, 0, 851976, 65536, 2, 786441, 327680, 0, 851977, 65536, 2, 786442, 327680, 0, 851978, 65536, 2, 786443, 327680, 0, 851979, 65536, 2, 786444, 327680, 0, 851980, 65536, 2, 786445, 65536, 1, 851981, 65536, 2, 786447, 327680, 0, 851983, 65536, 2, 786448, 327680, 0, 851984, 65536, 2, 786449, 327680, 0, 851985, 65536, 2, 786450, 65536, 1, 851986, 65536, 2, 786451, 65536, 1, 851987, 65536, 2, 786452, 327680, 0, 851988, 65536, 2, 786453, 65536, 1, 851989, 65536, 2, 786454, 327680, 0, 851990, 65536, 2, 786455, 65536, 1, 851991, 65536, 2, 786456, 393216, 0, 851992, 65536, 2, 786457, 65536, 2, 851993, 65536, 2, 917527, 65536, 3, 917526, 65536, 3, 917525, 65536, 3, 917524, 65536, 3, 786446, 327680, 0, 851982, 65536, 2, 917523, 65536, 3, 917522, 65536, 3, 917521, 65536, 3, 917520, 65536, 3, 917519, 65536, 3, 917518, 65536, 3, 917517, 65536, 3, 917516, 65536, 3, 917515, 65536, 3, 917514, 65536, 3, 917513, 65536, 3, 917512, 65536, 3, 917511, 65536, 3, 917510, 65536, 3, 917509, 65536, 3, 917508, 65536, 3, 917507, 65536, 3, 917506, 65536, 3, 917505, 65536, 3, 917504, 65536, 3, 983039, 65536, 3, 983038, 65536, 3, 983037, 65536, 3, 917528, 65536, 3, 917529, 65536, 3, 851994, 131072, 2, 917530, 131072, 3, 786458, 131072, 2, 720907, 65536, 2, 655371, 65536, 2, 589835, 65536, 2, 524299, 327680, 0, 720906, 0, 2, 655370, 0, 2, 589834, 0, 2, 524298, 0, 1, 720908, 131072, 2, 655372, 131072, 2, 589836, 131072, 2, 524300, 131072, 1, 720913, 131072, 2, 655377, 131072, 2, 589841, 131072, 2, 524305, 131072, 1, 720912, 65536, 2, 655376, 65536, 2, 589840, 65536, 2, 524304, 65536, 1, 720911, 0, 2, 655375, 0, 2, 589839, 0, 2, 524303, 0, 1, 720901, 131072, 2, 655365, 131072, 2, 589829, 131072, 2, 524293, 131072, 2, 458757, 131072, 1, 720900, 65536, 2, 655364, 65536, 2, 589828, 65536, 2, 524292, 65536, 2, 458756, 327680, 0, 720899, 0, 2, 655363, 0, 2, 589827, 0, 2, 524291, 0, 2, 458755, 0, 1, 720892, 65536, 2, 655356, 65536, 2, 655357, 65536, 2, 589821, 65536, 2, 524285, 65536, 2, 458749, 327680, 0, 917500, 65536, 2, 851964, 65536, 2, 786428, 65536, 2, 589820, 65536, 2, 524284, 65536, 2, 458748, 65536, 1, 917499, 0, 2, 851963, 0, 2, 786427, 0, 2, 720891, 0, 2, 655355, 0, 2, 589819, 0, 2, 524283, 0, 2, 458747, 0, 1, 983036, 65536, 3, 983035, 0, 3, 655358, 131072, 2, 589822, 131072, 2, 524286, 131072, 2, 458750, 131072, 1, 720922, 131072, 2, 720921, 65536, 2, 720920, 0, 2, 655386, 131072, 2, 655385, 65536, 2, 655384, 0, 2, 589848, 0, 2, 589849, 65536, 2, 524313, 65536, 2, 524314, 131072, 2, 589850, 131072, 2, 524312, 0, 2, 458776, 0, 2, 458777, 65536, 2, 458778, 131072, 2, 393240, 0, 1, 393241, 65536, 1, 393242, 131072, 1)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(786442, 327680, 0, 786444, 327680, 0, 786437, 327680, 0, 786435, 65536, 1, 786436, 327680, 0, 786443, 327680, 0, 786456, 327680, 0, 786457, 327680, 0, 786455, 327680, 0, 720894, 327680, 0, 720893, 327680, 0, 720892, 327680, 0, 720891, 0, 1)
script = ExtResource("1_qnq4p")
LevelName = "Los gehts!"

[node name="PathFollowEnemy" parent="." instance=ExtResource("3_dbq4k")]
position = Vector2(509, 151)
curve = SubResource("Curve2D_pncgo")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(627, 374)

[node name="CompletionArea" type="Area2D" parent="."]
position = Vector2(815, 158)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CompletionArea"]
shape = SubResource("CircleShape2D_od5vr")

[node name="InstaDeathArea" type="Area2D" parent="."]
position = Vector2(45, -105)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InstaDeathArea"]
polygon = PackedVector2Array(-490, -111, -232, -110, -236, 566, 830, 586, 871, 238, 772, -68, 1150, 717, -479, 701)

[node name="Burger" parent="." instance=ExtResource("4_647um")]
position = Vector2(576, 370)

[node name="Hubbedo" parent="." instance=ExtResource("5_q5x21")]
position = Vector2(754, 357)

[node name="Hunter_a" parent="." instance=ExtResource("5_gx02b")]
position = Vector2(252, 371)

[node name="Hunter_a2" parent="." instance=ExtResource("5_gx02b")]
position = Vector2(298, 371)

[node name="Hunter_a3" parent="." instance=ExtResource("5_gx02b")]
position = Vector2(203, 371)

[node name="HealthPickup" parent="." instance=ExtResource("7_8htb3")]
position = Vector2(528, 250)
